src/styles/index.scss
:root {
  --appbar-height: 4rem;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;

  font-family: 'Inter', sans-serif;

  margin: 0;

  min-height: 100dvh;
}

main {
  flex-grow: 1;

  margin-top: var(--appbar-height);
}

section {
  background-color: var(--clr-surface-1);
}

/*
* I got this idea from Kevin Powell
* https://www.youtube.com/watch?v=c13gpBrnGEw
*/
.content-grid {
  display: grid;
  grid-template-columns:
    [full-width-start] minmax(6.25rem, 1fr)
    [breakout-start] 6.25rem [content-start] minmax(0, 1200px)
    [content-end] 6.25rem [breakout-end] minmax(6.25rem, 1fr) [full-width-end];

  width: 100%;
}

.content-grid > * {
  grid-column: content;
}

.content-grid > .breakout {
  grid-column: breakout;
}

.content-grid > .full-width {
  grid-column: full-width;
}

